src/test/deca/context/invalid/ContextAvecObjet/New/classAextendsBnewB.deca
// Description:
//    Déclaration d'une classe dans une classe fille
//
// Resultats:
//    Erreur contextuelle ligne 14
//    B ne peut être cast en A

class B {}

class A extends B{
    int x;
}

{
    A x = new B();
}